--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+@media (max-width: 530px) {
+  body {
+    overflow-x: hidden;
+  }
 }
