fixed multiple css styling errors and started about page

--- a/src/components/Home/Home.styles.css
+++ b/src/components/Home/Home.styles.css
@@ -89,6 +89,7 @@
 
 @media (max-width: 530px) {
   .terminal-window {
+    margin-top: 25px;
     width: 300px;
     height: 400px;
     border-radius: 10px;
