--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   src: url(assets/fonts/Prime.otf);
 }
 
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -31,7 +35,6 @@
 }
 
 #portfolio-body {
-  margin-left: 60px;
   color: #ffffff;
   width: 100%;
   height: 100%;
@@ -41,12 +44,15 @@
 
 @media (max-width: 960px) {
   #portfolio-body {
-    margin-left: 0px;
+    padding-left: 0px;
   }
 }
 
 @media (max-width: 530px) {
   #portfolio-body {
-    margin-left: 0px;
+    padding-left: 0px;
+  }
+  .title {
+    margin-top: 80px;
   }
 }
