--- a/src/components/About/About.styles.css
+++ b/src/components/About/About.styles.css
@@ -1,9 +1,9 @@
 .about-page-container {
-  padding: 20px 0px 0px;
+  /* padding: 20px 0px 0px; */
 }
 
-@media (max-width: 530px) {
-  .about-page-container {
-    padding: 110px 0px 0px;
-  }
+.about-page-paragraph {
+  width: 80%;
+  margin: 20px auto;
+  text-align: justify;
 }
